# blog.osteele.com

./: .gitignore  .markdownlint.yaml  .rvmrc  .travis.yml  CNAME  Gemfile  README.md  Site.hs  SiteUtils.hs  Vagrantfile  _config.yml  _redirects  blog.osteele.cabal  config.yml  docker-compose.yml  htaccess  index.html  index.md  osteele-blog.cabal  package.json  site.hs  site.yml
_includes/: head.html  header.html
_posts/: 2003-04-19-moving-online.md  2003-04-24-etech.md  2003-05-04-declarative-directions.md  2003-05-05-joining-laszlo.md  2003-05-07-the-dsl-tower.md  2003-05-13-designing-a-language.md  2003-05-16-the-semantic-depths.md  2003-05-23-fenceposts-benzene-and-euler.md  2003-05-24-welcome-sarah-allen.md  2003-05-26-moblesse-oblige.md  2003-05-26-provenance.md  2003-06-01-newer-math.md  2003-06-15-disney-world.md  2003-06-21-behr-color-center.md  2003-06-21-most-fun-ive-ever-had.md  2003-06-22-alternate-syntaxes-for-xml.md  2003-06-22-pretty-printing-wth-xslt.md  2003-06-23-nobodys-on-that-train.md  2003-07-10-semiotics-of-weddings.md  2003-07-11-birthday-numerology.md  2003-07-23-in-memoriam-instant-update.md  2003-07-26-hard-questions.md  2003-07-26-the-other-oo.md  2003-08-01-mylaszlocom.md  2003-08-04-rethinking-mvc.md  2003-08-08-laszlo-blogging-widget.md  2003-08-14-dot-numbers.md  2003-08-20-test-versus-type.md  2003-08-31-a-taxonomy-of-comments.md  2003-09-02-before-teletext.md  2003-10-03-laszlo-booklist-application.md  2003-10-04-the-virtual-computer-company.md  2003-10-13-re-count.md  2004-03-27-optimizing-for-broadband.md  2004-03-28-classes-and-prototypes.md  2004-04-04-ingrediants-and-isochems.md  2004-04-19-pywordnet-20.md  2004-07-25-a-fresh-canvas.md  2004-08-02-whats-in-a-namespace.md  2004-08-04-unqualified-imports-for-xml.md  (+87 more)
_sass/: _layout.scss
_site/: Gemfile
config/: blog.osteele.com.conf  bootstrap.sh  mdl-style.rb
css/: default.css  site.css
files/: CNAME  htaccess
posts/: 2003-04-19-moving-online.md  2003-04-24-etech.md  2003-05-04-declarative-directions.md  2003-05-05-joining-laszlo.md  2003-05-07-the-dsl-tower.md  2003-05-13-designing-a-language.md  2003-05-16-the-semantic-depths.md  2003-05-23-fenceposts-benzene-and-euler.md  2003-05-24-welcome-sarah-allen.md  2003-05-26-moblesse-oblige.md  2003-05-26-provenance.md  2003-06-01-newer-math.md  2003-06-15-disney-world.md  2003-06-21-behr-color-center.md  2003-06-21-most-fun-ive-ever-had.md  2003-06-22-alternate-syntaxes-for-xml.md  2003-06-22-pretty-printing-wth-xslt.md  2003-06-23-nobodys-on-that-train.md  2003-07-10-semiotics-of-weddings.md  2003-07-11-birthday-numerology.md  2003-07-23-in-memoriam-instant-update.md  2003-07-26-hard-questions.md  (+106 more)
(+154 files in other folders)
