Name:               blog.osteele
Version:            0.1.0.0
Synopsis:           Personal blog of Oliver Steele
Description:        Personal blog of Oliver Steele
Homepage:           http://blog.osteele.com/
License:            Attribution-ShareAlike 4.0 International
License-file:       LICENSE
Author:             Oliver Steele
Maintainer:         steele@osteele.com
Copyright:          (C) 2013 Oliver Steele
Category:           Web
Build-type:         Simple
Extra-source-files: README.markdown
Cabal-version:      >= 1.8

Executable jaspervdj
  Main-is:        Main.hs
  Ghc-options:    -Wall
  Hs-source-dirs: src

  Build-depends:
    base     >= 4.6  && < 4.7,
    filepath >= 1.3  && < 1.4,
    hakyll   >= 4.4  && < 4.5,
    pandoc   >= 1.12 && < 1.13,
    process  >= 1.1  && < 1.2
